--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,10 @@
+<!--    ESTE ES EL ORIGINAL -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> <!-- Hay se pone el icono de la aplicacion -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,11 +26,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>TicketMoon</title>
   </head>
-  <body>
+  <body class=fondo>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+  
+    
+    <div id="aplicationfinal"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -38,6 +42,6 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+      -->
   </body>
 </html>
