edicion de eventos

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> <!-- Hay se pone el icono de la aplicacion -->
+    <link rel="icon" href="https://fotos.subefotos.com/1568f26e96688e5cb0d64fc555d2bfdfo.jpg" /> <!-- Hay se pone el icono de la aplicacion -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
